# molprep

./: .gitattributes  CMakeLists.txt  README.md  TODO
data/: CMakeLists.txt  amber.ttb  charmm.ttb
input/: full.in
src/: CMakeLists.txt  common.h  config.h.in  hbuild.c  hbuild.h  molprep.c  options.def  pdb.c  pdb.h  protonate.c  protonate.h  ssbuild.c  ssbuild.h  top.c  top.h
src/propka/: propka.F  propka.h
src/tests/: darray.c  f77_interface.c  list.c
src/util/: CMakeLists.txt  darray.c  darray.h  hashfuncs.c  hashfuncs.h  hashtab.c  hashtab.h  llist.c  llist.h  queue.h  stack.h  util.c  util.h  vec.h  zio.c  zio.h
test/: all_model.sh  crash_test.sh  test.in
